# ai-interior-designer

./: .gitignore  README.md  pyproject.toml
src/: app.py  detector.py  generator.py
tests/: check_gpu.py
